<resources>
    <string name="app_name">SocialConnector2</string>

    <!--Album-->
    <string name="left_arrow">Anterior</string>
    <string name="right_arrow">Siguiente</string>
    <string name="right_arrow_symbol">&gt;</string>
    <string name="left_arrow_symbol">&lt;</string>
    <string name="show_text">Leer texto</string>

    <!--Photo Text Dialog-->
    <string name="close_dialog">Cerrar</string>

    <!--Send Message-->
    <string name="help_text">Acá se verá su mensaje...</string>

    <!--Contacts-->
    <string name="contact_title">Contactos</string>

    <!--Menu-->
    <string name="menu_skype">Llamar</string>
    <string name="menu_album">Álbum Familiar</string>
    <string name="menu_send_message">Enviar Mensaje</string>
    <string name="menu_new_messages">Nuevos Mensajes</string>
    <string name="menu_new_photos">Nuevas Fotos</string>
    <string name="menu_settings">Configurar</string>

    <!--Settings-->
    <string name="settings_rrss">Configurar Redes Sociales</string>
    <string name="settings_code">Código</string>
    <string name="cant_save_password">No se pudo guardar la clave localmente</string>
    <string name="error_connecting_server">Error conectando al servidor. Intente de nuevo más tarde.</string>
    <string name="error_connecting_server_or_pass">Error conectando al servidor o clave incorrecta. Intente de nuevo más tarde.</string>

    <!-- Setup Alarms -->
    <string name="setup_alarm_tag">SOCIAL_SETUP</string>
    <string name="not_password_in_db">Password no existe en la base de datos</string>
    <string name="delete_short_alarm">Password no existe en la base de datos</string>
    <string name="create_short_alarm">Password no existe en la base de datos</string>
    <string name="reconfigure_error">No se pudo reconfigurar %1$d con social translator</string>


    <!--Login Social Connector-->
    <string name="enviar_login_sc">Enviar</string>
    <string name="cancelar_login_sc">Cancelar</string>
    <string name="username_sc">Usuario</string>
    <string name="pass_sc">Contraseña</string>

    <!--Test-->
    <string name="contact_name_test1">José Manuel</string>
    <string name="contenido_photo_test1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus nibh nec cursus varius. Suspendisse finibus, tortor vel tempus vulputate, elit massa tincidunt magna, at maximus leo metus sed massa. Nam sed efficitur dui. Maecenas vel odio non nisi gravida luctus. Fusce ac ex venenatis, sollicitudin ante sed, vehicula sapien...
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus nibh nec cursus varius. Suspendisse finibus, tortor vel tempus vulputate, elit massa tincidunt magna, at maximus leo metus sed massa. Nam sed efficitur dui. Maecenas vel odio non nisi gravida luctus. Fusce ac ex venenatis, sollicitudin ante sed, vehicula sapien...</string>

    <string name="contact_name_test2">Victor Leonardo</string>
    <string name="contenido_photo_test2">Duis congue leo feugiat, maximus enim eu, gravida dolor. Nunc fringilla neque ut pulvinar ultricies. Sed at eros turpis. Ut eget metus non ante tincidunt aliquet nec vitae nisi. Donec blandit leo sit amet enim molestie, quis egestas mauris vestibulum. Etiam malesuada, nisl id laoreet lacinia, augue orci iaculis neque, in condimentum...</string>

    <!--Telegram Dialog-->
    <string name="telegram_access_code">Ingrese código de acceso</string>
    <string name="telegram_new_code">Ingrese nuevo código enviado a su aplicación de Telegram.</string>

</resources>
