<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/background_new_messages_active"
    android:gravity="center">

    <LinearLayout
        android:tag="@string/left_arrow"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/prevButton"
            style="@style/buttonAlbum"
            android:text="@string/left_arrow_symbol"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/photoContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="50sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:scrollbars="vertical"
            android:maxLines = "12"
            android:isScrollContainer="true"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:tag="@string/right_arrow"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/nextButton"
            style="@style/buttonAlbum"
            android:text="@string/right_arrow_symbol"/>
    </LinearLayout>

</LinearLayout>