<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/background_album_active">

    <LinearLayout
        android:tag="@string/left_arrow"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/prevButton"
            style="@style/buttonArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left_arrow_symbol"
            android:textSize="60sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/message_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:tag="@string/right_arrow"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/nextButton"
            style="@style/buttonArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right_arrow_symbol"
            android:textSize="60sp" />
    </LinearLayout>

</LinearLayout>