<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_new_messages_active">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/contact_title"
        android:text="@string/contact_title"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/contact_name_test1"
                android:textColor="#FFFFFF"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/contact_padding"
                android:paddingRight="@dimen/contact_padding"
                android:textSize="@dimen/contact_letter"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/familia"

                android:layout_weight="2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:minHeight="1dp"
            android:background="#FFFFFF"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contact_name_test2"
            android:textColor="#FFFFFF"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/contact_padding"
            android:paddingRight="@dimen/contact_padding"
            android:textSize="@dimen/contact_letter"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/ic_fotos_nuevas"
            android:layout_weight="2"/>

    </LinearLayout>



</LinearLayout>